docs/1.1.1/api/python/_sources/generated/gravitino.constants.error.ErrorConstants.rst.txt
.. Licensed to the Apache Software Foundation (ASF) under one
   or more contributor license agreements.  See the NOTICE file
   distributed with this work for additional information
   regarding copyright ownership.  The ASF licenses this file
   to you under the Apache License, Version 2.0 (the
   "License"); you may not use this file except in compliance
   with the License.  You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing,
   software distributed under the License is distributed on an
   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
   KIND, either express or implied.  See the License for the
   specific language governing permissions and limitations
   under the License.

gravitino.constants.error.ErrorConstants
========================================

.. currentmodule:: gravitino.constants.error

.. autoclass:: ErrorConstants
   :members:                                    
   :show-inheritance:                           
   :inherited-members:                          

   
   .. automethod:: __init__

   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ErrorConstants.REST_ERROR_CODE
      ~ErrorConstants.ILLEGAL_ARGUMENTS_CODE
      ~ErrorConstants.INTERNAL_ERROR_CODE
      ~ErrorConstants.NOT_FOUND_CODE
      ~ErrorConstants.ALREADY_EXISTS_CODE
      ~ErrorConstants.NON_EMPTY_CODE
      ~ErrorConstants.UNSUPPORTED_OPERATION_CODE
      ~ErrorConstants.CONNECTION_FAILED_CODE
      ~ErrorConstants.FORBIDDEN_CODE
      ~ErrorConstants.NOT_IN_USE_CODE
      ~ErrorConstants.IN_USE_CODE
      ~ErrorConstants.UNKNOWN_ERROR_CODE
   
   